Layout Fixes
* Fixed photoset, footer & pagination layout issues
* Added jQuery & imagesLoaded dependencies, looking for a way around
that.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -667,6 +667,7 @@ a:active {
   font-family: "Overlook", "ATC Overlook", "ATCOverlook", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
+  margin-top: 3.5rem;
   text-align: center; }
 
 .pagination::after {
@@ -680,7 +681,8 @@ a:active {
   display: table; }
 
 .pagination__previous {
-  margin-right: 1rem; }
+  margin-right: 1rem;
+  color: #0091b2; }
 
 .pagination__jump {
   color: #aea198;
@@ -696,13 +698,25 @@ a:active {
   color: #0091b2; }
 
 .pagination__next {
-  margin-right: 0; }
+  margin-right: 0;
+  color: #0091b2; }
+
+.pagination:before {
+  content: '';
+  height: 2px;
+  width: 95%;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  top: -3.5rem;
+  background: #0091b2; }
 
 .post-pagination {
   max-width: 55rem;
   margin-left: auto;
   margin-right: auto;
   display: block;
+  margin-top: 3.5rem;
   text-align: center; }
 
 .post-pagination::after {
@@ -727,12 +741,22 @@ a:active {
 .post-pagination__next:last-of-type {
   margin-left: 0; }
 
+.post-pagination:before {
+  content: '';
+  height: 2px;
+  width: 95%;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  top: -3.5rem;
+  background: #0091b2; }
+
 footer {
   width: 100%;
   font-family: "Overlook", "ATC Overlook", "ATCOverlook", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
-  margin-top: 1rem;
+  margin-top: 3.5rem;
   padding: 1rem 0 1.333rem 0;
   background: #0091b2;
   background: -webkit-linear-gradient(top, #0091b2, #005c82);
@@ -1241,10 +1265,10 @@ main::after {
   content: '';
   height: 2px;
   width: 95%;
-  background: #0091b2;
   margin: 0 auto;
   position: relative;
-  top: 3.5rem; }
+  top: 3.5rem;
+  background: #0091b2; }
 
 .post:last-of-type {
   margin-bottom: 3.5rem; }
@@ -1277,12 +1301,10 @@ figure {
   max-width: 100%;
   margin: 0 auto; }
 
-.photoset {
+.photoset__photos {
+  display: block;
   width: 100%;
   max-width: 55rem; }
-
-.photoset__photos {
-  display: block; }
 
 .photoset__photos::after {
   clear: both;
@@ -1294,17 +1316,21 @@ figure {
 
 @media (min-width: 40rem) {
   .photoset__sizer, .photoset__photo {
-    width: calc(50% - 0.5rem); } }
+    width: calc(50% - 0.25rem); } }
+
+@media (min-width: 64rem) {
+  .photoset__sizer, .photoset__photo {
+    width: calc(33% - 0.375rem); } }
 
 @media (min-width: 120rem) {
   .photoset__sizer, .photoset__photo {
-    width: calc(25% - 0.25rem); } }
+    width: calc(25% - 0.5rem); } }
 
 .photoset__gutter-sizer {
-  width: 1rem; }
+  width: 0.5rem; }
 
 .photoset__photo {
-  margin-bottom: 1rem; }
+  margin-bottom: 0.5rem; }
 
 .quote {
   font-family: "Overlook", "ATC Overlook", "ATCOverlook", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
