--- a/src/stylesheets/pages/_posts.scss
+++ b/src/stylesheets/pages/_posts.scss
@@ -7,12 +7,16 @@
   margin-bottom: $base-line-height * 4;
   &:after {
     content: '';
+
     height: 2px;
     width: 95%;
-    background: $blue;
+
     margin: 0 auto;
+    
     position: relative;
     top: $base-line-height * 2;
+
+    background: $blue;
   }
   &:last-of-type {
     margin-bottom: $base-line-height * 2;
@@ -64,29 +68,31 @@ figure {
 
 .photoset {
 
-  width: 100%;
-  max-width: $measure;
-
   &__photos {
     @include row;
+    width: 100%;
+    max-width: $measure;
   }
 
   &__sizer, &__photo {
     width: 100%;
     @include respond-to(medium) {
-      width: calc(#{percentage(1/2)} - 0.5rem);
+      width: calc(50% - 0.25rem);
+    }
+    @include respond-to(large) {
+      width: calc(33% - 0.375rem);
     }
     @include respond-to(huge) {
-      width: calc(#{percentage(1/4)} - 0.25rem);
+      width: calc(25% - 0.5rem);
     }
   }
 
   &__gutter-sizer {
-    width: $gutter;
+    width: 0.5rem;
   }
 
   &__photo {
-    margin-bottom: $gutter;
+    margin-bottom: 0.5rem;
   }
 }
 
